# vscode-catch2-test-adapter

./: .appveyor.yml  .eslintrc.js  .gitattributes  .gitignore  .prettierrc.js  .travis.yml  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.production.json  tsconfig.test.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  release-legacy.yml  release.yml  test-legacy.yml  test.yml
documents/: CI-CD.md  support.md
documents/configuraiton/: debugConfigTemplate.config.md  executables.config.md
documents/configuration/: debug.configTemplate.md  executables.config.md  log.logSentry.md  log.telemetry.md  test.advancedExecutables.md  test.executables.md
documents/examples/test_wrapper/cmake_test_wrapper_example/: CMakeLists.txt  test1.cpp
documents/examples/test_wrapper/cppmain_test_wrapper_example/: CMakeLists.txt  ThirdParty.cmake  catch2main_wrapper.cpp  env_generator.sh  env_setter.hpp  googlemain_wrapper.cpp
resources/: deploy.ts
resources/githooks/: pre-push
resources/src/: logo.xcf
src/: AbstractExecutable.ts  AbstractGroupTestSuiteInfo.ts  AbstractRunnable.ts  AbstractRunnableSuite.ts  AbstractRunnableTestSuiteInfo.ts  AbstractSuit.ts  AbstractSuite.ts  AbstractTest.ts  AbstractTestInfo.ts  AbstractTestSuiteInfo.ts  AbstractTestSuiteInfoBase.ts  AdvancedExecutableInterface.ts  C2AllTestSuiteInfo.ts  C2ExecutableInfo.ts  C2SectionTestInfo.ts  C2TestAdapter.ts  C2TestInfo.ts  C2TestSuiteInfo.ts  Catch2TestInfo.ts  Catch2TestSuiteInfo.ts  Config.ts  ConfigOfExecGroup.ts  Configurations.ts  DebugConfigType.ts  Executable.ts  ExecutableConfig.ts  ExecutableFactory.ts  FSWatcher.ts  FSWrapper.ts  FsWrapper.ts  GazeWrapper.ts  GoogleTestInfo.ts  GoogleTestSuiteInfo.ts  GroupSuite.ts  GroupTestSuiteInfo.ts  Helpers.ts  IdGenerator.ts  LogWrapper.ts  Logger.ts  LoggerWrapper.ts  (+41 more)
src/coverage/: common.ts  custom.ts  gcov.ts  lcov.ts  llvm-cov.ts
src/framework/: AbstractExecutable.ts  AbstractTest.ts  Catch2Executable.ts  Catch2Runnable.ts  Catch2Suite.ts  Catch2Test.ts  Catch2TestInfo.ts  Catch2TestSuiteInfo.ts  CppUTestExecutable.ts  CppUTestRunnable.ts  CppUTestTest.ts  DOCExecutable.ts  DOCRunnable.ts  DOCSuite.ts  DOCTest.ts  DOCTestInfo.ts  DOCTestSuiteInfo.ts  ExecutableFactory.ts  Framework.ts  GoogleBenchmarkExecutable.ts  GoogleBenchmarkRunnable.ts  GoogleBenchmarkTest.ts  GoogleRunnable.ts  GoogleSuite.ts  GoogleTest.ts  GoogleTestExecutable.ts  GoogleTestInfo.ts  GoogleTestRunnable.ts  GoogleTestSuiteInfo.ts  GoogleTestTest.ts  SharedTestTags.ts  SharedVarOfExec.ts
src/repo_scripts/: deploy.sh  deploy.ts
src/repo_util/: deploy.ts
src/test/: C2TestAdapter.cpp.test.ts  C2TestAdapter.test.ts  FsWrapper.test.ts  Helpers.ts  QueueGraph.test.ts  TaskQueue.test.ts  TestAdapter.cpp.test.ts  TestAdapter.test.ts  TestCatch2Framework.test.ts  TestCatch2FrameworkLoad.test.ts  TestCommon.ts  TestConfigChangeDetection.test.ts  TestDocumentation.test.ts  TestESLint.test.ts  TestExecutablesVariable.test.ts  TestGoogleFramework.test.ts  TestLogOutputContent.test.ts  TestRealCatch2Executables.test.ts  ZZZ_TestLogOutputContent.test.ts  example1.ts  index.ts  suite2.cpp  suite3generator.sh
src/util/: BuildProcessChecker.ts  DevelopmentHelper.ts  FSWatcher.ts  FSWrapper.ts  HtmlStyleTranslator.ts  ParserInterface.ts  Platform.ts  ProgressReporter.ts  ResolveRule.ts  TaskPool.ts  TaskQueue.ts  TestProviderRegistrar.ts  TextStreamParser.ts  XmlParser.ts
syntaxes/: copper-test.tmLanguage.json  cpp.testOutput.tmLanguage.json  gtest.tmLanguage.json  test-output.tmLanguage.json  testMate.cpp.tmLanguage.json
test/: AbstractRunnable.test.ts  Catch2Framework.test.ts  Catch2FrameworkLoad.test.ts  Catch2Test.test.ts  Common.ts  ConfigChangeDetection.test.ts  Configurations.test.ts  Documentation.test.ts  ESLint.test.ts  ExecutableConfig.test.ts  ExecutablesVariable.test.ts  FSWatcher.test.ts  FSWrapper.symlinks.test.ts  FSWrapper.test.ts  FsWrapper.test.ts  GoogleFramework.test.ts  GoogleTest.test.ts  LogOutputContent.test.ts  RealCatch2Executables.test.ts  RealExecutables.test.ts  RunnableFactory.test.ts  TaskQueue.test.ts  TestAdapter.test.ts  TestCatch2FrameworkLoad.test.ts  TestCommon.ts  TestRealCatch2Executables.test.ts  Util.test.ts  example1.ts  index.ts  runTests.ts
test/bazel/: .bazelversion  .gitignore  MODULE.bazel  README.md  bazel-bazel
test/cpp/: .gitignore  CMakeLists.txt  Catch2Test.cmake  Catch2v3Test.cmake  DOCTest.cmake  GoogleBenchmark.cmake  GoogleTest.cmake  README.md  catch2v3_test1.cpp  doctest1.cpp  echo_args.cpp  gbenchmark.cpp  gtest.cpp  gtest1.cpp  gtest2.cpp  manytest.sh  output.catch2  outut.gtest  suite1.cpp  suite2.cpp  suite3.cpp  suite4.cpp  suite5.cpp
test/cpp/boosttest/: BoostTest.cmake  CMakeLists.txt  boosttest1.cpp
test/cpp/catch2/: CMakeLists.txt  Catch2Test.cmake  Catch2v3Test.cmake  catch.hpp  catch2v3_test1.cpp  suite1.cpp  suite2.cpp  suite3.cpp  suite4.cpp  suite5.cpp  suite6.cpp
test/cpp/catch2_bdd_tests/: a.test.cpp  b.test.cpp  c.test.cpp
test/cpp/cpputest/: CMakeLists.txt  CppUTest.cmake  cpputest1.cpp
test/cpp/doctest/: CMakeLists.txt  DOCTest.cmake  doctest1.cpp
test/cpp/gbenchmark/: CMakeLists.txt  GoogleBenchmark.cmake
test/cpp/gtest/: CMakeLists.txt  GoogleTest.cmake  gtest1.cpp  gtest2.cpp  gtest3.cpp
test/cpp/gunit/: CMakeLists.txt  GUnit.cmake  gunit1.cpp
test/cpp/misc/: CMakeLists.txt  emulator.cpp  manytest.sh
test/disabled_TODO/: AbstractRunnable.test.ts  Common.ts  Configurations.test.ts  ExecutableConfig.test.ts  ExecutablesVariable.test.ts  RealExecutables.test.ts  RunnableFactory.test.ts
test/framework/: Catch2Runnable.test.ts  Catch2Test.test.ts  CppUTestRunnable.test.ts  CppUTestTest.test.ts  GoogleBenchmarkRunnable.test.ts  GoogleBenchmarkTest.test.ts  GoogleRunnable.test.ts  GoogleTest.test.ts
(+32 files in other folders)
